--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -39,6 +39,7 @@
 
 // Component styles are injected through grunt
 // injector
+@import 'about/about.styl';
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
 @import 'main/main.styl';
