--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -43,5 +43,6 @@
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
 @import 'main/main.styl';
+@import 'pdf/pdf.styl';
 @import 'modal/modal.styl';
 // endinjector
