--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -16,6 +16,9 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         li(ng-class='{active: isActive("/about")}')
           a(href='/about') About
 
+        li(ng-class='{active: isActive("/pdf")}')
+          a(href='/pdf') PDF
+
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
 
