--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -42,6 +42,7 @@
 @import 'about/about.styl';
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
+@import 'chat-test/chat-test.styl';
 @import 'main/main.styl';
 @import 'pdf/pdf.styl';
 @import 'modal/modal.styl';
