--- a/client/app/chat-test/chat-test.jade
+++ b/client/app/chat-test/chat-test.jade
@@ -1,17 +1,14 @@
 div(ng-include='"components/navbar/navbar.html"')
 
 .container
-  .row
-    .col-lg-12
-      h1.page-header Chat:
-      ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='message in allMessages')
-        li
-          a(href='#', tooltip='{{message.user}}')
-            | {{message.date}} : {{message.content}}
-            button.close(type='button', ng-click='deleteMessage(message)') ×
+    h1.page-header Chat:
+    div#chatDiv(style='height: 500px; overflow: auto')
+      ul(ng-repeat='message in allMessages')
+          | {{message.user}} ({{message.date | date:'HH:mm:ss' }}) :
+          | {{message.content}}
 
-  form.message-form
-    p.input-group
-      input.form-control(type='text', placeholder='Enter your message here.', ng-model='newMessage')
-      span.input-group-btn
-        button.btn.btn-primary(type='submit', ng-click='addMessage()') Send
+    form.message-form
+      p.input-group
+        input.form-control(type='text', placeholder='Enter your message here.', ng-model='newMessage')
+        span.input-group-btn
+          button.btn.btn-primary(type='submit', ng-click='addMessage()') Send
