--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -44,6 +44,8 @@
 @import 'admin/admin.styl';
 @import 'chat-test/chat-test.styl';
 @import 'main/main.styl';
+@import 'newclassroom/newclassroom.styl';
 @import 'pdf/pdf.styl';
+@import 'presentation/presentation.styl';
 @import 'modal/modal.styl';
 // endinjector
