--- a/client/app/chat-test/chat-test.jade
+++ b/client/app/chat-test/chat-test.jade
@@ -1,5 +1,5 @@
-div#chatDiv(style='height: 600px; overflow: auto')
-  ul(ng-repeat='message in allMessages')
+div#chatDiv(style='height: 600px; overflow: auto;')
+  ul(ng-repeat='message in allMessages', ng-init='scroll()')
       | {{message.user}} ({{message.date | date:'HH:mm:ss' }}) :
       | {{message.content}}
 form.message-form
