Adding pdfStudent view

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -46,6 +46,7 @@
 @import 'main/main.styl';
 @import 'newclassroom/newclassroom.styl';
 @import 'pdf/pdf.styl';
+@import 'pdfStudent/pdfStudent.styl';
 @import 'presentation/presentation.styl';
 @import 'modal/modal.styl';
 // endinjector
