We can get lecture id

--- a/client/app/newclassroom/newclassroom.jade
+++ b/client/app/newclassroom/newclassroom.jade
@@ -21,13 +21,12 @@ header#banner.hero-unit
     br
     
     .col-md-4
-    .panel.col-md-4.panel-default
-      .panel-heading PDF Lesson
-        .panel-body.col-md-4
-            br
-            input.input-file(ng-model='slidesPath', type='file')
+    div.col-md-4.input-group.input-group
+      span.input-group-addon Slides Name: 
+      input.form-control(type='text', placeholder='Slides', ng-model='slidesPath')
+      
     br
     
     .col-md-4
     div.col-md-4
-      a.btn.btn-primary.btn-lg(href='/pdf', role='button') Create Classroom
+      a.btn.btn-primary.btn-lg(href='/pdf', role='button', ng-click='addClassroom()') Create Classroom
