--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -13,11 +13,8 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
           a(ng-href='{{item.link}}') {{item.title}}
 
-        li(ng-class='{active: isActive("/about")}')
-          a(href='/about') About
-
-        li(ng-class='{active: isActive("/pdf")}')
-          a(href='/pdf') PDF
+        li(ng-class='{active: isActive("/newclassroom")}')
+          a(href='/newclassroom') New Classroom
 
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
