--- a/client/app/presentation/presentation.jade
+++ b/client/app/presentation/presentation.jade
@@ -20,7 +20,7 @@ header#banner.hero-unit
         th Name
         th Creator
         th PDF Name
-      tr(ng-repeat='classroom in allClassrooms')
+      tr(ng-repeat='classroom in allClassrooms | filter: {isActive: true}')
         td  
           a(href='/pdfStudent', ng-click='enterClassroom(classroom)') {{classroom.name}}
         td  {{classroom.creator}}
