--- a/client/app/pdf/pdf.jade
+++ b/client/app/pdf/pdf.jade
@@ -12,4 +12,12 @@ div(ng-include='"components/navbar/navbar.html"')
         span#page_count
       br
       canvas#slides
+      br
+      center
+        br
+        span#tooQuick 0
+        | &nbsp;&nbsp;&nbsp;
+        span#perfect 0
+        | &nbsp;&nbsp;&nbsp;
+        span#tooSlow 0
     div(ng-controller='ChatTestCtrl')(ng-include='"app/chat-test/chat-test.html"')
