--- a/client/app/pdfStudent/pdfStudent.jade
+++ b/client/app/pdfStudent/pdfStudent.jade
@@ -19,11 +19,11 @@
         canvas#slides
       br
       center
-        a.btn.btn-danger.btn-sm(ng-click='addFeedback(1);') Trop rapide
+        a.btn.btn-danger.btn-sm(ng-click='addFeedback(1);') Too fast
         &emsp;
-        a.btn.btn-success.btn-sm(ng-click='addFeedback(2);') Bon rythme
+        a.btn.btn-success.btn-sm(ng-click='addFeedback(2);') Good
         &emsp;
-        a.btn.btn-warning.btn-sm(ng-click='addFeedback(3);') Trop lent
+        a.btn.btn-warning.btn-sm(ng-click='addFeedback(3);') Too slow
         br
         span#tooQuick 0
         | &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
