--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -45,6 +45,7 @@
 @import 'chat-test/chat-test.styl';
 @import 'main/main.styl';
 @import 'newclassroom/newclassroom.styl';
+@import 'pastLectures/pastLectures.styl';
 @import 'pdf/pdf.styl';
 @import 'pdfStudent/pdfStudent.styl';
 @import 'presentation/presentation.styl';
