--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -15,6 +15,9 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
 
         li(ng-class='{active: isActive("/newclassroom")}')
           a(href='/newclassroom') New Classroom
+          
+        li(ng-show='isLoggedIn()', ng-class'{active: isActive("/pastLectures")}')
+          a(href='/pastLectures') Past Lectures
 
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
