--- a/client/app/pdfStudent/pdfStudent.jade
+++ b/client/app/pdfStudent/pdfStudent.jade
@@ -30,4 +30,4 @@
         span#perfect 0
         | &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         span#tooSlow 0
-    div.row-fluid.col-md-3(ng-controller='ChatTestCtrl')(ng-include='"app/chat-test/chat-test.html"')
+    div.row-fluid.col-md-3(ng-controller='ChatCtrl')(ng-include='"app/chat/chat.html"')
