--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -42,7 +42,7 @@
 @import 'about/about.styl';
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
-@import 'chat-test/chat-test.styl';
+@import 'chat/chat.styl';
 @import 'main/main.styl';
 @import 'newclassroom/newclassroom.styl';
 @import 'pastLectures/pastLectures.styl';
