--- a/client/app/newclassroom/newclassroom.jade
+++ b/client/app/newclassroom/newclassroom.jade
@@ -11,7 +11,7 @@ header#banner.hero-unit
     div.alert.alert-danger(role='alert')(ng-hide='isLoggedIn()')
       p.lead You are not logged in !
       p Log in 
-        a(href='/login', ng-click='login()') here.
+        a(href='/login?from=newclassroom') here.
 
     
     .col-md-4
