--- a/client/app/newclassroom/newclassroom.jade
+++ b/client/app/newclassroom/newclassroom.jade
@@ -25,21 +25,21 @@ header#banner.hero-unit
     accordion(close-others='true', ng-show='isLoggedIn()')
       accordion-group
         accordion-heading
-          | PDF File by URL  
+          | PDF File by URL 
           i.pull-down.glyphicon(ng-class="{'glyphicon-chevron-down': true}")
         br
         .col-md-4
-        div.col-md-4.input-group.input-group(ng-show='isLoggedIn()')
+        div.col-md-4.input-group.input-group
           span.input-group-addon PDF Url: 
           input.form-control(type='text', placeholder='http://www.example.com/slides.pdf', ng-model='classroomPDF')
 
         br
         .col-md-4
-        div.col-md-4(ng-show='isLoggedIn()')
-          a.btn.btn-primary.btn-lg(href='/pdf', role='button', ng-click='addClassroom()') Create Classroom
+        div.col-md-4
+          a.btn.btn-primary.btn-lg(href='/pdf', role='button', ng-click='addClassroomFromURL()') Create Classroom
       accordion-group
         accordion-heading
-          | Upload PDF to your AWS Bucket  
+          | Upload PDF to your AWS Bucket   
           i.pull-down.glyphicon(ng-class="{'glyphicon-chevron-down': true}")
         // AWS Details
         .col-md-4
@@ -50,9 +50,11 @@ header#banner.hero-unit
               .input-group.bottom-marg-10
                 span.input-group-addon ACCESS KEY
                 input.form-control(ng-model='creds.access_key', type='text', placeholder='2992SD29299')
+              br
               .input-group.bottom-marg-10
                 span.input-group-addon SECRET KEY
                 input.form-control(ng-model='creds.secret_key', type='text', placeholder='AKS72628SE28')
+              br
               .input-group
                 span.input-group-addon BUCKET
                 input.form-control(ng-model='creds.bucket', type='text', placeholder='my_upload_bucket')
@@ -60,26 +62,37 @@ header#banner.hero-unit
         .col-md-8
           .panel.panel-default
             .panel-heading
-              select.fr(ng-model='sizeLimit')
-                option(value='5292880') 5MB Upload Limit
-                option(value='10585760') 10MB Upload Limit
-                option(value='15878640') 15MB Upload Limit
-              h3.panel-title Step 2: Upload The File
+              h3.panel-title Step 2: Upload The File (Max. 10MB) 
             .panel-body
-              input.bottom-marg-15(type='file', data-ng-file-select="onFileSelect($files)", name='file', file='')
+              input(type='file', name='file', accept='application/pdf', onchange="angular.element(this).scope().onFileSelect(this)")
               // Progress Bar
+              br
               .progress
                 .progress-bar(role='progressbar', aria-valuenow='{{ uploadProgress }}', aria-valuemin='0', aria-valuemax='100', style='width: {{ uploadProgress }}%;')
                   | {{ uploadProgress == 0 ? '' : uploadProgress + '%' }}
+              br      
               a.btn.btn-primary.btn-block.btn-lg(ng-click='upload()') Upload
-      accordion-group(heading='Lili')
-        | Lili
-      accordion-group(heading='Lolo')
-        | This is just some content to illustrate fancy headings.
+              
+        .col-md-4
+        div.col-md-4
+          br
+          br
+          a.btn.btn-primary.btn-lg(role='button', ng-click='addClassroomFromBucket()') Create Classroom  
       accordion-group
         accordion-heading
-          | I can have markup, too! 
+          | Choose from available PDF   
           i.pull-down.glyphicon(ng-class="{'glyphicon-chevron-down': true}")
-        |         This is just some content to illustrate fancy headings.
-
+         table.table.table-hover
+            tr
+              th PDF Name
+              th Path
+            tr(ng-click="select(file)", ng-repeat='file in allFiles', ng-class="{active:file == selected}")
+              td  {{file.title}}
+              td  {{file.path}}
+   
+        .col-md-4
+        div.col-md-4
+          br
+          br
+          a.btn.btn-primary.btn-lg(role='button', ng-click='addClassroomFromAsset()') Create Classroom 
 
