Designing the app

--- a/client/app/chat/chat.jade
+++ b/client/app/chat/chat.jade
@@ -7,4 +7,4 @@ form.message-form
   p.input-group
     input.form-control(type='text', placeholder='Enter your message here.', ng-model='newMessage')
     span.input-group-btn
-      button.btn.btn-primary(type='submit', ng-click='addMessage()') Send
+      button.btn.btn-primary(type='submit', ng-click='addMessage()', style='background:#6666CC') Send
