--- a/client/app/pdf/pdf.jade
+++ b/client/app/pdf/pdf.jade
@@ -19,17 +19,17 @@
       div.col-md-2
       div.col-md-2
         center
-          a.btn.btn-primary.btn-default(href='/', role='button') Leave Classroom        
+          a.btn.btn-primary.btn-default(href='/', role='button', style='background:#6666CC') Leave Classroom
       br
       center
         canvas#slides
       br
       center
-        span.label.label-danger Trop rapide
-        &nbsp;
-        span.label.label-success Bon rythme
-        &nbsp;
-        span.label.label-warning Trop lent
+        span.label.label-danger Too fast
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        span.label.label-success Good
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        span.label.label-warning Too slow
         br
         span#tooQuick 0
         | &emsp;&emsp;&emsp;&emsp;&emsp;
