--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,20 +1,19 @@
 div(ng-include='"components/navbar/navbar.html"')
+
+header#banner.hero-unit(style='background:#6666CC')
+  .container
+    img(src='assets/images/logo.png', alt='Live classroom logo')
+    p.lead Login
+    
 .container
   .row
     .col-sm-12
-      h1 Login
-      p
-        | Accounts are reset on server restart from
-        code server/config/seed.js
-        | . Default account is
-        code test@test.com
-        | /
-        code test
-      p
-        | Admin account is
-        code admin@admin.com
-        | /
-        code admin
+    p
+    div.alert.alert-info(role='alert')
+      p.lead
+        | Welcome to Live Classrooms !
+      p.lead
+        | Please log in or register to use our platform.
 
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
@@ -37,18 +36,4 @@ div(ng-include='"components/navbar/navbar.html"')
           a.btn.btn-default.btn-lg.btn-register(href='/signup')
             | Register
 
-        hr
-
-        div
-          a.btn.btn-facebook(href='', ng-click='loginOauth("facebook")')
-            i.fa.fa-facebook
-            |  Connect with Facebook
-          = ' '
-          a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
-            i.fa.fa-google-plus
-            |  Connect with Google+
-          = ' '
-          a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
-            i.fa.fa-twitter
-            |  Connect with Twitter
   hr
