Added button navigation for PDFs

--- a/client/app/pastLectures/pastLectures.jade
+++ b/client/app/pastLectures/pastLectures.jade
@@ -1,8 +1,14 @@
 div(ng-include='"components/navbar/navbar.html"')
 
+header#banner.hero-unit(style='background:#6666CC')
+  .container
+    img(src='assets/images/logo.png', alt='Live classroom logo')
+    p.lead Past Lectures 
+    
 .container
   .row
-      p.lead Your given lectures:
+    br
+    p.lead Your given lectures:
      
   div
     table.table.table-hover
