--- a/client/app/pdf/pdf.jade
+++ b/client/app/pdf/pdf.jade
@@ -4,8 +4,7 @@
       div.col-md-2
         center
           a#activationButton.btn.btn-primary.btn-danger(role='button', ng-click='deactivateClassroom()') Deactivate Classroom
-      div.col-md-2
-      div.col-md-4
+      div.col-md-8
         center
           a.btn.btn-default.btn-sm#prev Previous
           &nbsp;
@@ -15,8 +14,9 @@
             | Page:&nbsp;
             span#page_num
             | &nbsp;/&nbsp;
-            span#page_count   
-      div.col-md-2
+            span#page_count
+          &nbsp;
+          a.btn.btn-default.btn-sm#fullscreen Full Screen             
       div.col-md-2
         center
           a.btn.btn-primary.btn-default(href='/', role='button', style='background:#6666CC') Leave Classroom
