--- a/client/app/pdfStudent/pdfStudent.jade
+++ b/client/app/pdfStudent/pdfStudent.jade
@@ -3,8 +3,7 @@
     div.well.col-md-9
       center
         div.col-md-2
-        div.col-md-2
-        div.col-md-4
+        div.col-md-8
           a.btn.btn-default.btn-sm#prev(ng-hide='sync') < Previous
           &nbsp;
           a.btn.btn-default.btn-sm#next(ng-hide='sync') Next >
@@ -17,7 +16,8 @@
             &nbsp;
             input(type='checkbox', ng-model='sync', ng-change='syncUnsync()')
             | Sync
-        div.col-md-2
+          &nbsp;
+          a.btn.btn-default.btn-sm#fullscreen(ng-hide='sync') Full Screen   
         div.col-md-2
           center
             a.btn.btn-primary.btn-default(href='/', role='button', style='background:#6666CC') Leave Classroom
